Page lookups. Template source

--- a/Sandbox/Sandbox/Views/Test.cshtml
+++ b/Sandbox/Sandbox/Views/Test.cshtml
@@ -1,3 +1,7 @@
 ﻿@model Sandbox.TestViewModel
 
-<div>Text @Model.Title</div>
+@{
+    Layout = "/_Layout.cshtml";
+}
+
+<div>Text12345 @Model.Title</div>
