Create project for MVC integration. Sandbox for MVC project

--- a/Sandbox/SandboxMVC/Views/Test.cshtml
+++ b/Sandbox/SandboxMVC/Views/Test.cshtml
@@ -1,5 +1,5 @@
-﻿@model Sandbox.TestViewModel
-@inject Sandbox.TestViewModel injectedModel
+﻿@model SandboxMVC.TestViewModel
+@inject SandboxMVC.TestViewModel injectedModel
 
 <div>Hello @Model.Title</div>
 @section Go
