--- a/tests/RazorLight.Tests/Assets/Files/LayoutWithSection2.cshtml
+++ b/tests/RazorLight.Tests/Assets/Files/LayoutWithSection2.cshtml
@@ -1,7 +1,10 @@
-﻿<layout>
-    @RenderBody()
-</layout>
-
-<section>
-    @RenderSection("HEADER", false)
-</section>
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+</head>
+<body>
+	@RenderSection("HEADER", required: false)
+	<hr />
+	@RenderBody()
+</body>
+</html>
