--- a/tests/RazorLight.Tests/Assets/Files/NestedPartial.cshtml
+++ b/tests/RazorLight.Tests/Assets/Files/NestedPartial.cshtml
@@ -1,4 +1,4 @@
-@model RazorLight.Tests.IntegrationTests.TestViewModel
+@model RazorLight.Tests.Integration.TestViewModel
 
 This is a nested partial which attempts to render Partial.cshtml
 
