--- a/tests/RazorLight.Tests/Assets/Files/Partial.cshtml
+++ b/tests/RazorLight.Tests/Assets/Files/Partial.cshtml
@@ -1,3 +1,3 @@
-@model RazorLight.Tests.IntegrationTests.TestViewModel
+@model RazorLight.Tests.Integration.TestViewModel
 
 This included partial template is used to render data of the passed view model: @Model.Name
