--- a/tests/RazorLight.Tests/Assets/Files/template6.cshtml
+++ b/tests/RazorLight.Tests/Assets/Files/template6.cshtml
@@ -1,4 +1,4 @@
-@model RazorLight.Tests.IntegrationTests.TestViewModel
+@model RazorLight.Tests.Integration.TestViewModel
 @{
 	Layout = "LayoutWithRequiredSection.cshtml";
 }
