--- a/tests/RazorLight.Tests/Assets/Files/template7.cshtml
+++ b/tests/RazorLight.Tests/Assets/Files/template7.cshtml
@@ -1,4 +1,4 @@
-@model RazorLight.Tests.IntegrationTests.TestViewModel
+@model RazorLight.Tests.Integration.TestViewModel
 
 We are rendering this with @Model.Name
 
