--- a/tests/RazorLight.Precompile.Tests/SamplesWithBaseDir/FullMessage.cshtml
+++ b/tests/RazorLight.Precompile.Tests/SamplesWithBaseDir/FullMessage.cshtml
@@ -3,6 +3,6 @@ Count of issues with the source information: @Model.Count
 @foreach (var item in Model)
 {
     <p>
-    @{await IncludeAsync("SamplesWithBaseDir\\MessageItem.cshtml", item);}
+    @{await IncludeAsync("SamplesWithBaseDir/MessageItem.cshtml", item);}
     </p>
 }
